<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Медицински помощник</string>
    <string name="login_message">Влизане в Медицински помощник</string>
    <string name="login_username_label">Потребител: </string>
    <string name="login_password_label">Парола: </string>
    <string name="login_remember_label">Запомни ме: </string>
    <string name="login_button">Влизане</string>
    <string name="login_error">Грешка при влизане. Проверете настройките.</string>
    <string name="settings_menu">Настройки</string>
    <string name="settings_url">URL</string>
    <string name="settings_url_default">http://10.11.10.108:9000</string>
    <string name="settings_accept_all_certificates">Приемай невалидни SSL сертификати</string>
    <string name="error_name">Грешка</string>
    <string name="error_close">Затвори</string>
    <string name="button_save">Запамети</string>
    <string name="button_cancel">Отказ</string>
    <string name="menu_edit">Редакция</string>
    <string name="menu_delete">Изтриване</string>
    <string name="tab_schedules">Графици</string>
    <string name="tab_results">Резултати</string>
    <string name="duration_hour">Час</string>
    <string name="duration_day">Ден</string>
    <string name="duration_month">Месец</string>
    <string name="duration_year">Година</string>
    <string name="delete_dialog_name">Потвърдете изтриването</string>
    <string name="delete_dialog_text">Сигурно ли сте, че искате да изтриете \'%s\'?</string>
    <string name="delete_dialog_yes">Да</string>
    <string name="delete_dialog_no">Не</string>
    <string name="schedules_view_for">Графици за %s</string>
    <string name="manage_schedule_add_window">Добави график</string>
    <string name="manage_schedule_edit_window">Редактирай график</string>
    <string name="manage_schedule_description_label">Описание: </string>
    <string name="manage_schedule_datetime_label">Започни плана от: </string>
    <string name="manage_schedule_startAfter_label">Започни след: </string>
    <string name="manage_schedule_frequency_label">Честота: </string>
    <string name="manage_schedule_duration_label">Продължителност: </string>
    <string name="manage_results_window">Добави група за резултат</string>
    <string name="manage_result_name_label">Име</string>
    <string name="manage_result_units_label">Мерна единица</string>
    <string name="manage_results_value_add_window">Добави стойност</string>
    <string name="manage_results_value_edit_window">Редактирай стойност</string>
    <string name="manage_results_value_datetime_label">Измерено на: </string>
    <string name="manage_results_value_measurement_label">Стойност: </string>
    <string name="reminder_label">Напомняне за график</string>
    <string name="reminder_close">Готово, затвори прозореца</string>
</resources>
