<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/schedules_scroll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

        <LinearLayout
                android:id="@+id/manage_schedule_description_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/manage_schedule_description_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_schedule_description_label"/>

            <EditText
                    android:id="@+id/manage_schedule_description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
        </LinearLayout>

        <TextView
                android:id="@+id/manage_schedule_datetime_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/manage_schedule_datetime_label"
                android:layout_below="@+id/manage_schedule_description_group"/>

        <LinearLayout
                android:id="@+id/manage_schedule_datetime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/manage_schedule_datetime_label">

            <DatePicker
                    android:id="@+id/manage_schedule_date"
                    android:calendarViewShown="false"
                    style="@style/datetime"/>

            <TimePicker
                    android:id="@+id/manage_schedule_time"
                    style="@style/datetime"/>
        </LinearLayout>

        <RelativeLayout
                android:id="@+id/manage_schedule_startAfter_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/manage_schedule_datetime"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/manage_schedule_startAfter_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_schedule_startAfter_label"
                    android:paddingTop="35dp"/>

            <NumberPicker
                    android:id="@+id/manage_schedule_startAfter"
                    android:layout_toStartOf="@+id/manage_schedule_startAfter_type"
                    style="@style/number"/>

            <Spinner
                    android:id="@+id/manage_schedule_startAfter_type"
                    style="@style/spinner"/>
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/manage_schedule_frequency_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/manage_schedule_startAfter_group">

            <TextView
                    android:id="@+id/manage_schedule_frequency_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_schedule_frequency_label"
                    android:paddingTop="35dp"/>

            <NumberPicker
                    android:id="@+id/manage_schedule_frequency"
                    android:layout_toStartOf="@+id/manage_schedule_frequency_type"
                    style="@style/number"/>

            <Spinner
                    android:id="@+id/manage_schedule_frequency_type"
                    style="@style/spinner"/>
        </RelativeLayout>


        <RelativeLayout
                android:id="@+id/manage_schedule_duration_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/manage_schedule_frequency_group">

            <TextView
                    android:id="@+id/manage_schedule_duration_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_schedule_duration_label"
                    android:paddingTop="35dp"/>

            <NumberPicker
                    android:id="@+id/manage_schedule_duration"
                    android:layout_toStartOf="@+id/manage_schedule_duration_type"
                    style="@style/number"/>

            <Spinner
                    android:id="@+id/manage_schedule_duration_type"
                    style="@style/spinner"/>
        </RelativeLayout>

        <Button
                android:id="@+id/manage_schedule_button_cancel"
                style="@style/button_cancel"
                android:layout_below="@+id/manage_schedule_duration_group"/>

        <Button
                android:id="@+id/manage_schedule_button_save"
                style="@style/button_save"
                android:layout_below="@+id/manage_schedule_duration_group"/>
        
    </RelativeLayout>

</ScrollView>